--- a/css/style.css
+++ b/css/style.css
@@ -21,22 +21,19 @@
     --success: #5FBB2D;
     --error: #BA2732;
     --error-light: #CA2C37;
-    --light-pink: #EAEAEA;
+    --light-grey-ea: #EAEAEA;
     --social: #212A3A;
     --darkest-blue: #1D2739;
 }
 
 body {
-    min-width: 1200px;
-    margin: 0;
+    min-width: 940px;
     padding: 0;
-    font-family: "Cuprum", "PT Sans";
+    font-family: "Cuprum", Arial, sans-serif;
     font-size: 13px;
-    font-weight: normal;
+    line-height: 24px;
     color: var(--basic-black);
-    text-transform: none;
     background-color: var(--basic-white);
-    font-style: normal;
 }
 
 .main-header {
@@ -45,15 +42,9 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--basic-white);
-    line-height: 24px;
 }
 
 button {
-    background-color: var(--basic-white);
-    font-size: 21px;
-    line-height: 21px;
-    outline: none;
     border: 0;
 }
 
@@ -69,6 +60,10 @@ input {
     outline: none;
 }
 
+ul {
+    list-style: none;
+}
+
 li {
     list-style-type: none;
 }
@@ -79,27 +74,31 @@ li {
 }
 
 .main-logo {
+    width: 220px;
+    height: 47px;
+    display: block;
     background-color: var(--basic-red);
-    height: 220px;
-    width: 68px;
+    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+    text-align: center;
 }
 
-.search {
-    background-color: none;
+.search::placeholder {
     color: var(--basic-white);
 }
 
 .search:focus {
-    background-color: var(--basic-white);
     color: var(--basic-black);
+    background-color: var(--basic-white);
 }
 
-.bookmark {
+.mark-basket {
     font-size: 18px;
+    color: var(--basic-white);
 }
 
-.basket {
-    font-size: 18px;
+.mark-basket:active {
+    opacity: 50%;
+    background-color: var(--graphite);
 }
 
 .order-button {
@@ -115,29 +114,21 @@ li {
 }
 
 .order-button:active {
-    background-color: var(--basic-green);
     opacity: 50px;
 }
 
-.button-registration:hover {
+.button-log-reg {
+    background-color: var(--basic-white);
+    font-size: 21px;
+    line-height: 21px;
+}
+
+.button-log-reg:hover {
     color: var(--basic-red);
 }
 
-.button-login:hover {
-    color: var(--basic-red);
-}
-
-.button-registration:active {
+.button-log-reg:active {
     color: var(--basic-greylight);
-}
-
-.button-login:active {
-    color: var(--basic-greylight);
-}
-
-a:focus {
-    background-color: var(--graphite);
-    opacity: 50%;
 }
 
 .main-header-logo:focus {
@@ -150,7 +141,6 @@ a:focus {
 
 .nav-list {
     line-height: 24px;
-    color: var(--basic-white);
     list-style: none;
 }
 
@@ -158,6 +148,16 @@ a:focus {
     font-size: 18px;
     display: inline-block;
     line-height: 24px;
+    color: var(--basic-white);
+}
+
+.nav-list-item:hover {
+    background-color: var(--eclipse);
+}
+
+.nav-list-item:active {
+    background-color: var(--darkest-blue);
+    opacity: 50%;
 }
 
 .header-description {
@@ -185,7 +185,7 @@ a:focus {
     text-align: center;
 }
 
-.slider-list {
+.slider-item {
     color: var(--basic-white);
     background-color: var(--basic-black);
 }
@@ -194,22 +194,12 @@ a:focus {
     background-image: url(../img/background-perf.jpg);
 }
 
-.perforator {
+.slider-title {
     font-size: 36px;
     line-height: 36px;
 }
 
-.drill {
-    font-size: 36px;
-    line-height: 36px;
-}
-
-.perforator-description {
-    font-size: 18px;
-    line-height: 24px;
-}
-
-.drill-description {
+.slider-desc {
     font-size: 18px;
     line-height: 24px;
 }
@@ -233,11 +223,12 @@ a:focus {
 }
 
 .promo-btn {
-    opacity: .5;
+    text-transform: uppercase;
     text-align: center;
     font-size: 14px;
     line-height: 18px;
-    background-color: var(--basic-white);
+    background-color: rgba(255, 255, 255, 0.3);
+    color: var(--basic-white);
 }
 
 .regular-btn:active {
@@ -296,7 +287,7 @@ a:focus {
 
 .products-item {
     background-color: var(--basic-white);
-    border: 1px solid var(--light-pink);
+    border: 1px solid var(--light-grey-ea);
 }
 
 .products-item:hover {
@@ -324,6 +315,7 @@ a:focus {
 }
 
 .product-button-buy {
+    text-transform: uppercase;
     background-color: var(--basic-green);
     color: var(--basic-white);
     font-size: 14px;
@@ -331,6 +323,7 @@ a:focus {
 }
 
 .product-button-save {
+    text-transform: uppercase;
     background-color: var(--basic-white);
     color: var(--eclipse-lighter);
     border: 3px solid var(--basic-green);
@@ -359,17 +352,18 @@ a:focus {
     border: 1px solid var(--light-pink);
 }
 
-.creator-item-image:hover {
+.creator-item:hover {
     filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
 }
 
-.creator-item-image:active {
+.creator-item:active {
     filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
     opacity: 50%;
 }
 
-.services {
-    background-color: var(--basic-background);
+.services-item {
+    background-color: var(--eclipse-lighter);
+    color: var(--basic-white);
 }
 
 .services-title {
@@ -400,6 +394,11 @@ a:focus {
     color: var(--basic-white);
     font-size: 21px;
     line-height: 30px;
+}
+
+.services-item:hover {
+    background-color: var(--eclipse);
+    color: var(--basic-white);
 }
 
 
@@ -442,14 +441,55 @@ a:focus {
     opacity: 50%;
 }
 
+.fnav {
+    font-size: 18px;
+    display: inline-block;
+    color: var(--basic-white);
+}
+
+.fnav:hover {
+    text-decoration: underline var(--basic-white);
+}
+
+.fnav:active {
+    opacity: 50%;
+    text-decoration: none;
+}
+
 .add {
     color: var(--sand);
 }
 
-.bottom {
+.add:hover {
+    text-decoration: underline var(--sand);
+}
+
+.add:active {
+    opacity: 50%;
+    text-decoration: none;
+}
+
+.footer-tel {
+    color: var(--basic-white);
+}
+
+.connection {
     font-size: 16px;
     line-height: 18px;
     background-color: var(--eclipse);
+}
+
+.formail {
+    color: var(--sand);
+}
+
+.formail:hover {
+    text-decoration: underline var(--sand);
+}
+
+.formail:active {
+    color: var(--basic-red);
+    text-decoration: none;
 }
 
 .social-item {
