--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,22 @@
     --smoky: #F4F4F4;
 }
 
+.page {
+    height: 100%;
+}
+
+.wrapper {
+    margin: auto;
+    max-width: 1170px;
+    padding: 0 15px;
+}
+
+.page-body {
+    width: 100%;
+    min-height: 100%;
+    align-content: start;
+}
+
 body {
     min-width: 940px;
     padding: 0;
@@ -69,19 +85,30 @@ ul {
     list-style: none;
 }
 
-.main-menu {
+.color-header {
     background-color: var(--eclipse);
+}
+
+.main-menu {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: 42px;
     color: var(--basic-white);
 }
 
 .main-logo {
-    width: 220px;
-    height: 47px;
-    display: block;
+    padding: 12px 56px 17px;
+    display: inline-block;
     background-color: var(--basic-red);
     box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
     text-align: center;
 }
+
+
+/*.dv-search {
+    grid-column: 2/3;
+}*/
 
 .search::placeholder {
     color: var(--basic-white);
@@ -96,6 +123,16 @@ ul {
     font-size: 18px;
     color: var(--basic-white);
 }
+
+
+/*.user-link-save {
+    grid-column: 2/3;
+}
+
+.user-link-basket {
+    grid-column: 3/4;
+}
+*/
 
 .user-link-full {
     background-color: var(--basic-red);
@@ -112,6 +149,15 @@ ul {
     white-space: nowrap;
     background-color: var(--basic-green);
     color: var(--basic-white);
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 19px;
+    padding-right: 16px;
+}
+
+button order-button {
+    width: 150px;
+    height: 42px;
 }
 
 .order-button:hover {
@@ -122,11 +168,36 @@ ul {
     opacity: 50%;
 }
 
+.middle-header {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: 153px;
+    padding: 40px 130px;
+    justify-content: space-between;
+}
+
+
+/*.header-description {
+    grid-column: 1/2;
+}
+
+.header-phone {
+    grid-column: 2/3;
+}
+
+.header-address {
+    grid-column: 2/3;
+}
+*/
+
 .button-log-reg {
+    /*grid-column: 3/4;*/
     color: var(--basic-black);
     background-color: var(--basic-white);
     font-size: 21px;
     line-height: 21px;
+    margin-right: 10px;
+    padding: 12px 27px 12px 19px;
 }
 
 .button-log-reg:hover {
@@ -183,17 +254,29 @@ ul {
 }
 
 .navigation {
+    text-align: center;
+    display: grid;
+    margin: auto;
     background-color: var(--eclipse-lighter);
 }
 
 .nav-list {
+    padding-top: 3px;
+    padding-left: 53px;
+    padding-right: 53px;
+    padding-bottom: 7px;
     list-style: none;
 }
 
 .nav-list-item {
+    margin-right: 56px;
     font-size: 18px;
     display: inline-block;
     color: var(--basic-white);
+}
+
+.nav-list-itemlast {
+    margin-right: 0px;
 }
 
 .nav-list-item a {
@@ -234,7 +317,32 @@ ul {
     text-align: center;
 }
 
+.promo-container {
+    display: flex;
+    justify-content: center;
+}
+
+.promo-list {
+    padding: 0px 0px 0px 0px;
+    display: grid;
+    grid-template-columns: repeat(3, 330px);
+    gap: 20px;
+    margin: 59px auto;
+    list-style: none;
+    color: var(--basic-white);
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.slider-list {
+    padding-left: 0px;
+}
+
 .slider-item {
+    height: 266px;
+    padding-top: 3px;
+    padding-left: 24px;
     color: var(--basic-white);
     background-color: var(--basic-black);
 }
@@ -246,11 +354,15 @@ ul {
 .slider-title {
     font-size: 36px;
     line-height: 36px;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 .slider-desc {
     font-size: 18px;
     line-height: 24px;
+    margin-top: 5px;
+    margin-bottom: 113px;
 }
 
 .regular-btn {
@@ -258,17 +370,23 @@ ul {
     color: var(--basic-white);
     font-size: 14px;
     line-height: 18px;
+    padding: 11px 46px 9px;
+    margin-top: 0px;
 }
 
 .slider-item-drill {
     background-image: url(../img/background-drill.jpg);
+    display: none;
 }
 
-.promo-list {
-    color: var(--basic-white);
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30px;
+.promo-item {
+    height: 123px;
+    padding-left: 23px;
+}
+
+.promo-item-title {
+    margin-top: 20px;
+    margin-bottom: 14px;
 }
 
 .promo-btn {
@@ -278,6 +396,16 @@ ul {
     line-height: 18px;
     background-color: rgba(255, 255, 255, 0.3);
     color: var(--basic-white);
+    padding: 10px 24px 10px 23px;
+}
+
+.promo-item-slider {
+    /*box-sizing: border-box;*/
+    /* padding-top: 23px;
+    padding-bottom: 27px;*/
+    grid-column: 1/3;
+    grid-row: 2/4;
+    padding-left: 0px;
 }
 
 .promo-btn:hover {
@@ -298,51 +426,82 @@ ul {
 
 .promo-item-material {
     /*background-image: url(../img/promo/material.svg);*/
+    grid-column: 1/2;
+    grid-row: 1/2;
     background-color: var(--special-yellow);
-    width: 300px;
-    height: 123px;
 }
 
 .promo-item-instrument {
-    /*background-image: url(../img/promo/instrument.svg);*/
+    /* background-image: url(../img/promo/instrument.svg);*/
+    grid-column: 2/3;
+    grid-row: 1/2;
     background-color: var(--azure);
-    width: 300px;
-    height: 123px;
 }
 
 .promo-item-tech {
     /*background-image: url(../img/promo/tech.svg);*/
+    grid-column: 3/4;
+    grid-row: 1/2;
     background-color: var(--pink);
-    width: 300px;
-    height: 123px;
 }
 
 .promo-item-discount {
     /*background-image: url(../img/promo/discount.svg);*/
+    grid-column: 3/4;
+    grid-row: 2/3;
     background-color: var(--green-lighter);
-    width: 300px;
-    height: 123px;
 }
 
 .promo-item-delivery {
     /*background-image: url(../img/promo/delivery.svg);*/
+    grid-column: 3/4;
+    grid-row: 3/4;
     background-color: var(--special-yellow);
-    width: 300px;
-    height: 123px;
+}
+
+.grid-goods {
+    grid-column: 1/-1;
+    grid-row: 3/4;
+    margin-bottom: 70px;
 }
 
 .popular {
+    padding: 25px 19px 26px 28px;
     background-color: var(--vanilla);
     color: var(--eclipse-lighter);
     font-size: 30px;
     line-height: 30px;
+    margin-bottom: 21px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular-heading {
+    display: inline-block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.regular-btn-popular {
+    display: inline-block;
+    white-space: nowrap;
+    margin-right: 19px;
 }
 
 .products-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    padding-left: 0px;
     font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .products-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 18px 21px;
     background-color: var(--basic-white);
     border: 1px solid var(--light-grey-ea);
 }
@@ -355,6 +514,13 @@ ul {
     font-weight: bold;
     font-size: 18px;
     line-height: 20px;
+}
+
+.product-item-image {
+    min-height: 164px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .price-before {
@@ -372,6 +538,7 @@ ul {
 }
 
 .product-button-buy {
+    display: none;
     text-transform: uppercase;
     background-color: var(--basic-green);
     color: var(--basic-white);
@@ -380,6 +547,7 @@ ul {
 }
 
 .product-button-save {
+    display: none;
     text-transform: uppercase;
     background-color: var(--basic-white);
     color: var(--eclipse-lighter);
@@ -405,9 +573,27 @@ ul {
     border: 3px solid var(--border-grey);
 }
 
+.creator-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+}
+
+li.creator-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .creator-item {
+    padding: 40px 50px;
     background-color: var(--basic-white);
     border: 1px solid var(--light-grey-ea);
+}
+
+.creator-item-image {
+    max-height: 73px;
 }
 
 .creator-item:hover {
@@ -417,6 +603,12 @@ ul {
 .creator-item:active {
     filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
     opacity: 50%;
+}
+
+.grid-services {
+    display: grid;
+    grid-template-columns: 240px 1fr 1fr;
+    grid-template-rows: auto;
 }
 
 .services-item {
@@ -445,12 +637,14 @@ ul {
 .text {
     font-family: "PT Sans", "Arial", sans-serif;
     line-height: 24px;
+    margin-bottom: 59px;
 }
 
 .services-list {
     color: var(--basic-white);
     font-size: 21px;
     line-height: 30px;
+    padding: 0px;
 }
 
 .services-item {
@@ -472,6 +666,18 @@ ul {
     color: var(--eclipse-lighter);
 }
 
+.services-delivery {
+    margin-left: 80px;
+}
+
+.services-credit {
+    display: none;
+}
+
+.services-guarantee {
+    display: none;
+}
+
 
 /*.services-guarantee {
     background-image: url(../img/guarantee.svg);
@@ -482,12 +688,32 @@ ul {
     background-image: url(../img/credit.svg);
 }*/
 
+.info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.info-text {
+    margin-top: 0px;
+    margin-bottom: 32px;
+}
+
+.info-text-second {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 .info-title {
     font-size: 30px;
 }
 
 .company-item {
     font-size: 18px;
+}
+
+.regular-btn-info {
+    margin-top: 20px;
+    margin-bottom: 70px;
 }
 
 .catalog-pages-link {
@@ -515,7 +741,7 @@ ul {
     text-transform: uppercase;
 }
 
-.catalog-filter {
+.title-filter-sort {
     background-color: var(--creamy);
     font-size: 13px;
     line-height: 18px;
@@ -592,11 +818,6 @@ input[type="checkbox"] {
     line-height: 18px;
 }
 
-.sorting-title {
-    font-size: 13px;
-    font-weight: normal;
-}
-
 .sorting-item {
     color: var(--basic-black);
     opacity: 0.3;
@@ -625,12 +846,12 @@ input[type="checkbox"] {
 
 .pagination-item {
     background-color: var(--basic-white);
-}
-
-.pagination-link {
     border: 1px solid var(--another-grey);
     box-sizing: border-box;
     border-radius: 2px;
+}
+
+.pagination-link {
     color: var(--basic-black);
     line-height: 18px;
 }
@@ -643,9 +864,12 @@ input[type="checkbox"] {
     border: 1px solid var(--basic-red);
 }
 
-.pagination-link-selected {
+.pagination-item-selected {
     border: 1px solid var(--basic-red);
     background-color: var(--basic-red);
+}
+
+.pagination-link-selected {
     color: var(--basic-white);
 }
 
@@ -686,8 +910,6 @@ input[type="checkbox"] {
 }
 
 .feedback-button {
-    color: var(--basic-white);
-    background-color: var(--basic-red);
     font-size: 14px;
     line-height: 18px;
     text-transform: uppercase;
@@ -716,11 +938,6 @@ input[type="checkbox"] {
     background-color: var(--basic-background-close);
 }
 
-.basket-order {
-    background-color: var(--basic-red);
-    color: var(--basic-white);
-}
-
 .basket-continue {
     background-color: var(--basic-white);
     color: var(--basic-black);
@@ -733,8 +950,17 @@ input[type="checkbox"] {
     line-height: 24px;
 }
 
+.grid-upfooter {
+    display: grid;
+    grid-template-columns: 380px 1fr;
+    grid-template-rows: repeat(2, fr);
+}
+
 .main-logo-big {
-    height: 68px;
+    width: 220px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 20px 0px 25px;
 }
 
 .footer-text:focus {
@@ -744,8 +970,18 @@ input[type="checkbox"] {
 
 .fnav {
     font-size: 18px;
-    display: inline-block;
     color: var(--basic-white);
+    list-style: none;
+}
+
+.fnav-list {
+    grid-column: 2/4;
+    display: flex;
+    justify-content: space-between;
+}
+
+.fnav-item {
+    display: inline;
 }
 
 .fnav:hover {
@@ -759,6 +995,16 @@ input[type="checkbox"] {
 
 .add {
     color: var(--sand);
+}
+
+.add-list {
+    grid-column: 2/4;
+    display: flex;
+    justify-content: space-between;
+}
+
+.add-item {
+    display: inline;
 }
 
 .add:hover {
@@ -780,6 +1026,29 @@ input[type="checkbox"] {
     background-color: var(--eclipse);
 }
 
+.grid-connection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-text {
+    grid-column: 1/2;
+}
+
+.social-list {
+    grid-column: 2/3;
+    display: inline;
+}
+
+.footer-text-mailcredit {
+    grid-column: 3/4;
+    display: inline;
+}
+
+.footer-text-credit {
+    display: inline;
+}
+
 .contacts-link {
     color: var(--sand);
 }
@@ -796,4 +1065,6 @@ input[type="checkbox"] {
 .social-item {
     background: var(--social);
     border-radius: 50%;
+    display: inline;
+    align-items: center;
 }
